# innowise_laboratory

./: .gitignore
lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: querries.sql  school.db
lecture_5/: pyproject.toml
lecture_5/book_api/: database.py  exceptions.py  main.py  models.py  schemas.py
lecture_5/tests/: test_books.py
lecture_6/: .dockerignore  Dockerfile  requirements.txt
lecture_6/app/: main.py
